# FEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FEngine.sln  LICENSE  README.md  editor_data.json  imgui.ini  run2_client_1.bat  run_client.bat  run_client_1.bat  run_client_2.bat  run_client_3.bat  run_client_server.bat  run_editor_client_1.bat  run_editor_client_3.bat  run_editor_client_server.bat  run_game_client.bat  run_game_server.bat  run_server.bat
code/: CMakeLists.txt  fanCommandLine.h  fanEngine.cpp  fanGlobalIncludes.h  fanGlobalValues.cpp  fanGlobalValues.h  fanLaunchArguments.h  fanLiveppMain.hpp  fanMain.cpp  fanMain2.cpp  main.cpp
code/core/: CMakeLists.txt  fanAssert.cpp  fanAssert.hpp  fanBulletWarnings.hpp  fanColor.cpp  fanColor.hpp  fanCorePrecompiled.hpp  fanDebug.cpp  fanDebug.hpp  fanHash.hpp  fanISerializable.cpp  fanISerializable.hpp  fanOwlMemcpy.hpp  fanRandom.cpp  fanRandom.hpp  fanSerializable.cpp  fanSerializable.hpp  fanSerializedValues.cpp  fanSerializedValues.hpp  fanSignal.hpp  fanSingleton.hpp  fanSystem.cpp  fanSystem.hpp  fanTypeInfo.cpp  fanTypeInfo.h  fanTypeInfo.hpp  fanUniqueID.cpp  fanUniqueID.hpp  fanUnitTest.cpp  fanUnitTest.hpp
code/ecs/: CMakeLists.txt  fanComponent.hpp  fanComponentsCollection.cpp  fanComponentsCollection.hpp  fanEcsArchetype.cpp  fanEcsArchetype.hpp  fanEcsChunk.cpp  fanEcsChunk.hpp  fanEcsChunkAllocator.cpp  fanEcsChunkAllocator.hpp  fanEcsChunkVector.cpp  fanEcsChunkVector.hpp  fanEcsComponent.hpp  fanEcsComponentsKey.cpp  fanEcsComponentsKey.h  fanEcsComponentsKey.hpp  fanEcsComponentsTuple.h  fanEcsConfig.h  fanEcsEntity.hpp  fanEcsManager.h  fanEcsSingleton.hpp  fanEcsSingletonComponents.cpp  fanEcsSingletonComponents.h  fanEcsSystem.hpp  fanEcsSystems.cpp  fanEcsTag.hpp  fanEcsTest.cpp  fanEcsTest.hpp  fanEcsTypes.hpp  fanEcsView.hpp  fanEcsWorld.cpp  fanEcsWorld.hpp  fanEntity.hpp  fanSignal.hpp  fanSingletonComponent.hpp  fanSlot.cpp  fanSlot.hpp  fanSystem.hpp  fanTag.hpp
code/editor/: CMakeLists.txt  fanDragnDrop.cpp  fanDragnDrop.h  fanEditor.cpp  fanEditor.hpp  fanEditorCopyPaste.cpp  fanEditorCopyPaste.hpp  fanEditorDebug.h  fanEditorDebug.hpp  fanEditorGizmos.cpp  fanEditorGizmos.h  fanEditorGizmos.hpp  fanEditorGrid.cpp  fanEditorGrid.hpp  fanEditorHolder.cpp  fanEditorHolder.hpp  fanEditorPrecompiled.hpp  fanEditorProjectContainer.cpp  fanEditorProjectContainer.hpp  fanEditorSelection.cpp  fanEditorSelection.hpp  fanEngine.cpp  fanEngine.hpp  fanGroupsColors.cpp  fanGroupsColors.hpp  fanImguiIcons.cpp  fanImguiIcons.h  fanImguiIcons.hpp  fanLaunchSettings.hpp  fanMain.cpp  fanMainMenuBar.cpp  fanMainMenuBar.h  fanMainMenuBar.hpp  fanModals.cpp  fanModals.h  fanModals.hpp  fanRenderDragnDrop.hpp
code/engine/: CMakeLists.txt  fanEngineSerializable.cpp  fanEngineSerializable.hpp  fanFullscreen.hpp  fanGameHolder.cpp  fanGameHolder.hpp  fanIGame.cpp  fanIGame.hpp  fanIHolder.cpp  fanIHolder.hpp  fanPrefab.cpp  fanPrefab.hpp  fanPrefabManager.hpp  fanSceneResourcePtr.cpp  fanSceneResourcePtr.hpp  fanSceneSerializable.cpp  fanSceneTags.hpp
code/game/: CMakeLists.txt  fanCameraController.cpp  fanGame.cpp  fanGame.hpp  fanGameClient.cpp  fanGameClient.hpp  fanGameHolder.cpp  fanGameHolder.hpp  fanGameManager.cpp  fanGameManager.hpp  fanGamePrecompiled.hpp  fanGameSerializable.cpp  fanGameSerializable.hpp  fanGameServer.cpp  fanGameServer.hpp  fanGameTags.cpp  fanGameTags.hpp  fanHealth.h  fanLaunchSettings.hpp  fanPlanet.cpp  fanPlayerInput.h  fanPlayersManager.cpp  fanSolarEruption.cpp  fanSolarPanel.cpp  fanSolarSystem.cpp  fanSpaceShip.cpp  fanSpaceShip.h  fanWeapon.cpp  fanWeapon.h  fanWithEnergy.cpp  fanWithEnergy.h
code/network/: CMakeLists.txt  fanImGuiNetwork.hpp  fanNetConfig.hpp  fanNetworkCommon.h  fanNetworkPrecompiled.hpp  fanPacket.cpp  fanPacket.hpp  fanUDPSocket.cpp  fanUDPSocket.h  fanUDPSocket.hpp
code/physics/: fanPhysicsManager.h
code/project_empty/: CMakeLists.txt  fanEmptyMain.cpp  fanEmptyProject.cpp  fanEmptyProject.hpp  fanMainEmpty.cpp
code/project_spaceships/: CMakeLists.txt  fanEmptyProject.cpp  fanGameClient.hpp  fanGameServer.cpp  fanGameServer.hpp  fanGameTags.hpp  fanLaunchArgsSpaceships.cpp  fanLaunchArgsSpaceships.hpp  fanLaunchArguments.h  fanMain.cpp  fanMainSpaceships.cpp
code/render/: CMakeLists.txt  fanFbxImporter.cpp  fanFbxImporter.hpp  fanFont.cpp  fanFont.hpp  fanGLTFImporter.cpp  fanGLTFImporter.hpp  fanGLTFImporter2.cpp  fanGLTFImporter2.hpp  fanMesh.cpp  fanMesh.hpp  fanMesh2.cpp  fanMesh2.hpp  fanMesh2D.cpp  fanMesh2D.hpp  fanMesh2DManager.cpp  fanMesh2DManager.hpp  fanMeshManager.cpp  fanMeshManager.hpp  fanMeshManager2.cpp  fanMeshManager2.hpp  fanRenderDragnDrop.cpp  fanRenderDragnDrop.hpp  fanRenderGlobal.cpp  fanRenderGlobal.hpp  fanRenderPrecompiled.hpp  fanRenderResourcePtr.cpp  fanRenderResourcePtr.hpp  fanRenderRessourcePtr.cpp  fanRenderRessourcePtr.hpp  fanRenderSerializable.cpp  fanRenderSerializable.hpp  fanRenderer.cpp  fanRenderer.hpp  fanRendererDebug.cpp  fanRendererDebug.hpp  fanResourceManager.cpp  fanResourceManager.hpp  fanRessourceManager.cpp  fanRessourceManager.hpp  (+14 more)
code/renderer/: CMakeLists.txt  fanFbxImporter.cpp  fanFbxImporter.hpp  fanMesh.cpp  fanRenderer.cpp  fanRendererDebug.cpp  fanRessourceManager.cpp  fanRessourceManager.h  fanUIMesh.cpp
code/scene/: CMakeLists.txt  fanComponentPtr.cpp  fanComponentPtr.hpp  fanDragnDrop.cpp  fanDragnDrop.hpp  fanEcsSystems.cpp  fanFullscreen.cpp  fanFullscreen.hpp  fanGameBase.hpp  fanGameHolder.cpp  fanGameHolder.hpp  fanGameobject.cpp  fanGameobject.hpp  fanIGame.cpp  fanIGame.hpp  fanIHolder.cpp  fanIHolder.hpp  fanPhysicsManager.cpp  fanPhysicsManager.hpp  fanPrefab.cpp  fanPrefab.hpp  fanPrefabManager.cpp  fanPrefabManager.hpp  fanRessourcePtr.cpp  fanRessourcePtr.h  fanRessourcePtr.hpp  fanScene.cpp  fanScene.h  (+13 more)
middleware/: CMakeLists.txt  fanGLFW.hpp  fanGLM.hpp  fanImgui.hpp  fanJson.hpp  nlohmann_json.h
projects/: CMakeLists.txt  fanPCH.hpp
submodules/: CMakeLists.txt  fanDisableWarnings.hpp  fanGlm.hpp  fanJson.hpp  fanWindowsH.hpp
(+3262 files in other folders)
